--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "@nativescript-community/plugin-seed",
+    "name": "@nativescript-community/rich-text",
     "version": "0.0.1",
     "description": "This is the description for the plugin seed. This is what will be published to NPM.",
-    "main": "./plugin-seed",
+    "main": "./rich-text",
     "sideEffects": false,
-    "typings": "./plugin-seed.d.ts",
+    "typings": "./rich-text.d.ts",
     "nativescript": {
         "platforms": {
             "android": "6.0.0",
@@ -22,12 +22,17 @@
         "Vue"
     ],
     "bugs": {
-        "url": "https://github.com/nativescript-community/plugin-seed/issues"
+        "url": "https://github.com/nativescript-community/rich-text/issues"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/nativescript-community/plugin-seed"
+        "url": "https://github.com/nativescript-community/rich-text"
     },
     "license": "Apache-2.0",
-    "readmeFilename": "README.md"
+    "readmeFilename": "README.md",
+    "dependencies": {
+        "currency.js": "~2.0.4",
+        "currency-symbol": "~1.0.6",
+        "imask": "~6.2.2"
+    }
 }
