--- a/demo-snippets/package.json
+++ b/demo-snippets/package.json
@@ -2,6 +2,6 @@
     "name": "@nativescript-community/template-snippet",
     "version": "0.0.1",
     "dependencies": {
-        "@nativescript-community/rich-text": "../plugin"
+        "@abbieben/rich-text": "../plugin"
     }
 }
