--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@abbieben/rich-text",
-    "version": "1.0.1",
+    "version": "1.3.1",
     "description": "This is the description for the plugin seed. This is what will be published to NPM.",
     "main": "./rich-text",
     "sideEffects": false,
@@ -33,6 +33,10 @@
     "dependencies": {
         "currency.js": "~2.0.4",
         "currency-symbol": "~1.0.6",
-        "imask": "~6.2.2"
+        "imask": "~6.2.2",
+        "libphonenumber-js": "^1.9.39"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
